--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@hapi/hapi": "^20.2.2",
     "@types/boom": "^7.3.2",
     "@types/hapi__hapi": "^20.0.13",
+    "@types/joi": "^17.2.3",
     "@types/mysql": "^2.15.21",
     "dotenv": "^16.0.3",
     "moment": "^2.29.4",
