--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/mysql": "^2.15.21",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "hapi-auth-jwt2": "^10.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
