--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@hapi/boom": "^10.0.0",
     "@hapi/hapi": "^20.2.2",
+    "@hapi/inert": "^7.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/boom": "^7.3.2",
     "@types/hapi__hapi": "^20.0.13",
